Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.12.1, 5.13.0 Alpha 1
-
None
-
-
b971310e2df095678dd0d6d8e08a8f657d346036 (qt/qtbase/5.12)
Description
https://codereview.qt-project.org/#/c/244355/ Update submodules on 'dev' in qt5
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1542664431
agent:2018/11/02 08:12:27 build.go:313: [make check -j1] 900 900 agent:2018/11/02 08:12:27 build.go:193: /home/qt/work/qt/qtdeclarative/tests/auto/qml/qqmllanguage/target_wrapper.sh ./tst_qqmllanguage receivers agent:2018/11/02 08:12:27 build.go:193: [ 0.000 D] qt.qpa.xcb TestNamespace::QXcbBasicConnection::initializeShm - Has MIT-SHM : true agent:2018/11/02 08:12:27 build.go:193: [ 0.000 D] qt.qpa.xcb TestNamespace::QXcbBasicConnection::initializeShm - Has MIT-SHM FD : true agent:2018/11/02 08:12:27 build.go:193: [ 0.002 D] qt.qpa.screen TestNamespace::QXcbScreen::QXcbScreen - Failed to parse EDID data for output "default" edid data: "" agent:2018/11/02 08:12:27 build.go:193: [ 0.004 D] qt.qpa.screen TestNamespace::QXcbConnection::initializeScreens - adding QXcbScreen(0x1024400, name="default", geometry=1280x800+0+0, availableGeometry=1213x773+67+27, devicePixelRatio=1.0, logicalDpi=QPair(96.0,96.0), physicalSize=339.0x212.0mm, screenNumber=0, virtualSize=1280x800 (1280.0x800.0mm), orientation=Qt::LandscapeOrientation, depth=24, refreshRate=76.0, root=299, windowManagerName="GNOME Shell") (Primary: true ) agent:2018/11/02 08:12:27 build.go:193: [ 0.004 D] qt.qpa.screen TestNamespace::QXcbConnection::initializeScreens - primary output is "default" agent:2018/11/02 08:12:27 build.go:193: [ 0.081 D] qt.qpa.xcb TestNamespace::QXcbEventDispatcher::createEventDispatcher - using glib dispatcher agent:2018/11/02 08:12:27 build.go:193: [ 0.092 D] qt.qpa.input.methods.serialize TestNamespace::QIBusEngineDesc::deserializeFrom - QIBusEngineDesc::fromDBusArgument() "(sa{sv}ssssssssussssssss)" agent:2018/11/02 08:12:27 build.go:193: [ 0.092 D] qt.qpa.input.methods TestNamespace::QIBusPlatformInputContext::QIBusPlatformInputContext - socketWatcher.addPath "/home/qt/.config/ibus/bus/3f4251b8257548d2b54496446bfa4288-unix-0" agent:2018/11/02 08:12:27 build.go:193: ********* Start testing of tst_qqmllanguage ********* agent:2018/11/02 08:12:27 build.go:193: Config: Using QtTest library 5.13.0, Qt 5.13.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 8.2.0) agent:2018/11/02 08:12:27 build.go:193: PASS : tst_qqmllanguage::initTestCase() agent:2018/11/02 08:12:27 build.go:193: FAIL! : tst_qqmllanguage::receivers() 'o->isSignalConnected(QMetaMethod::fromSignal(&MyReceiversTestObject::mySignal))' returned FALSE. () agent:2018/11/02 08:12:27 build.go:193: Loc: [tst_qqmllanguage.cpp(3589)] agent:2018/11/02 08:12:27 build.go:193: PASS : tst_qqmllanguage::cleanupTestCase() agent:2018/11/02 08:12:27 build.go:193: Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 5ms agent:2018/11/02 08:12:27 build.go:193: ********* Finished testing of tst_qqmllanguage ********* agent:2018/11/02 08:12:27 build.go:193: [ 0.112 D] qt.qml.gc.statistics TestNamespace::QV4::MemoryManager::dumpStats - Qml GC memory allocation statistics: agent:2018/11/02 08:12:27 build.go:193: [ 0.112 D] qt.qml.gc.statistics TestNamespace::QV4::MemoryManager::dumpStats - Total memory allocated: 0 agent:2018/11/02 08:12:27 build.go:193: [ 0.112 D] qt.qml.gc.statistics TestNamespace::QV4::MemoryManager::dumpStats - Max memory used before a GC run: 0 agent:2018/11/02 08:12:27 build.go:193: [ 0.112 D] qt.qml.gc.statistics TestNamespace::QV4::MemoryManager::dumpStats - Max memory used after a GC run: 0 agent:2018/11/02 08:12:27 build.go:193: [ 0.112 D] qt.qml.gc.statistics TestNamespace::QV4::MemoryManager::dumpStats - Requests for different item sizes: agent:2018/11/02 08:12:27 build.go:193: [ 0.112 D] qt.qml.gc.statistics TestNamespace::QV4::MemoryManager::dumpStats - < 32 bytes: 817 agent:2018/11/02 08:12:27 build.go:193: [ 0.112 D] qt.qml.gc.statistics TestNamespace::QV4::MemoryManager::dumpStats - < 64 bytes: 221 agent:2018/11/02 08:12:27 build.go:193: [ 0.112 D] qt.qml.gc.statistics TestNamespace::QV4::MemoryManager::dumpStats - < 96 bytes: 514 agent:2018/11/02 08:12:27 build.go:193: [ 0.112 D] qt.qml.gc.statistics TestNamespace::QV4::MemoryManager::dumpStats - < 128 bytes: 80 agent:2018/11/02 08:12:27 build.go:193: [ 0.112 D] qt.qml.gc.statistics TestNamespace::QV4::MemoryManager::dumpStats - < 160 bytes: 0 agent:2018/11/02 08:12:27 build.go:193: [ 0.112 D] qt.qml.gc.statistics TestNamespace::QV4::MemoryManager::dumpStats - < 192 bytes: 0 agent:2018/11/02 08:12:27 build.go:193: [ 0.112 D] qt.qml.gc.statistics TestNamespace::QV4::MemoryManager::dumpStats - >= 224 bytes: 64 agent:2018/11/02 08:12:27 build.go:193: [ 0.113 D] qt.qpa.events.reader TestNamespace::QXcbEventQueue::~QXcbEventQueue - nodes on heap: 0 agent:2018/11/02 08:12:27 build.go:193: Makefile:332: recipe for target 'check' failed agent:2018/11/02 08:12:27 build.go:193: make: *** [check] Error 1 agent:2018/11/02 08:12:27 build.go:237: Process finished with error: exit status 2
Attachments
Issue Links
- resulted from
-
QTBUG-32340 QObject::isSignalConnected doesn't react to QObject::disconnect
-
- Closed
-
For Gerrit Dashboard: QTBUG-71550 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
244702,1 | Revert "QObject: Fix isSignalConnected() when signals have been disconnected" | 5.12 | qt/qtbase | Status: ABANDONED | 0 | 0 |
244725,2 | QObject: Check for declarative signals in isSignalConnected | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |